RESOLVED FIXED 85304
Slow scrolling on www.sholby.net
https://bugs.webkit.org/show_bug.cgi?id=85304
Summary Slow scrolling on www.sholby.net
Anders Carlsson
Reported 2012-05-01 13:41:22 PDT
Slow scrolling on www.sholby.net
Attachments
Patch (4.09 KB, patch)
2012-05-01 13:46 PDT, Anders Carlsson
no flags
Patch (4.95 KB, patch)
2012-05-01 15:17 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2012-05-01 13:46:20 PDT
Anders Carlsson
Comment 2 2012-05-01 15:17:39 PDT
Anders Carlsson
Comment 3 2012-05-01 15:21:33 PDT
Andy Estes
Comment 4 2012-05-04 15:05:31 PDT
(In reply to comment #3) > Committed r115752: <http://trac.webkit.org/changeset/115752> This caused the WebKit2.NewFirstVisuallyNonEmptyLayout API test to start failing on the bots. See <https://bugs.webkit.org/show_bug.cgi?id=85675> for details.
Note You need to log in before you can comment on or make changes to this bug.